Downgrade to Java 1.8 for a wider consumer base